--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <img class="project" src="http://assets.nydailynews.com/polopoly_fs/1.2540156.1456171264!/img/httpImage/image.jpg_gen/derivatives/article_750/jeopardy.jpg" alt="">
                   </a>
                     <div class="caption">
-                        <h3>Jeopradry with Friends!</h3>
+                        <h3>Jeopardy with Friends!</h3>
                         <p>An interactive version of Jeopardy built with Socket.io</p>
                     </div>
                 </div>
