--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <a href="mailto:jcostello10@gmail.com" class="email-lnk"><i class="fa fa-envelope" aria-hidden="true"></i></a>
             </h2>
             <br>
-            <p class="jumbotext">Web Developer + Designer + Programmer <p>
+            <p class="jumbotext">Web Developer + Programmer <p>
             <p class="jumbotext">Homesteading in the cybernetic meadows.</p>
           </header>
         </div>
